--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
